--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.7.4"
+    "@astrojs/react": "^2.2.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.13.7",
+    "@mui/material": "^5.13.7",
+    "astro": "^2.7.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
