--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^2.0.1",
     "astro": "^2.7.4",
     "youtube-player": "^5.6.0"
   }
